# retrospect

./: .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile.cross-arm64  LICENSE  Makefile  README.md  config.toml
.github/workflows/: build.yml
clients/python/: pyproject.toml  retro_cli.py  retrospect_client.py
cmake/toolchains/: aarch64-linux-gnu.cmake
src/: JackTransport.cpp  JackTransport.h  audio_main.cpp  main.cpp
src/client/: EngineClient.h  LocalEngineClient.cpp  LocalEngineClient.h  OscEngineClient.cpp  OscEngineClient.h
src/config/: Config.cpp  Config.h
src/core/: EngineCommand.h  InputChannel.cpp  InputChannel.h  Loop.cpp  Loop.h  LoopEngine.cpp  LoopEngine.h  Metronome.cpp  Metronome.h  MetronomeClick.h  MidiSync.cpp  MidiSync.h  RingBuffer.cpp  RingBuffer.h  SpscQueue.h  TimeStretcher.cpp  TimeStretcher.h
src/server/: OscServer.cpp  OscServer.h
src/tui/: Tui.cpp  Tui.h
